--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
-    "name": "Wasi Session Generator",
-    "description": "I'm Web Session Generator by Itxx Me Wasi",
+    "name": "King Session Generator",
+    "description": "I'm Web Session Generator by King_Dav",
     "logo": "",
     "repository": "https://github.com/Giftedmaurice/giftedmdV2-session-generator",
     "keywords": ["@Xcelsama"],
